--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-use": "^17.5.0",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.11",
+    "sweetalert2": "^11.12.2",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
