--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL=http://localhost:3001
+VITE_BACKEND_URL=https://f6dub1cmn7.execute-api.eu-west-3.amazonaws.com/dev
+# http://localhost:3001
