--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,22 @@
-name: Deploy React App to S3
+name: Deploy to S3
 
 on:
   push:
     branches:
-      - main  
+      - main
 
 jobs:
-  deploy:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3 
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3 
       with:
-        node-version: '18.17.1'
+        node-version: '18'
 
     - name: Install dependencies
       run: npm install
@@ -24,16 +24,12 @@ jobs:
     - name: Build project
       run: npm run build
 
-    - name: Sync with S3
+    - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
       with:
-        args: --acl public-read --delete
+        args: --acl public-read --follow-symlinks --delete
       env:
-        AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME }} 
+        AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: 'eu-west-3'  
-        SOURCE_DIR: 'build'  
-
-    - name: Run Cypress tests
-      run: npm run test  
+        AWS_REGION: 'eu-west-3' 
