new add actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,20 @@ jobs:
     - name: Build project
       run: npm run build
 
+    # Run Jest tests
+    - name: Run Jest tests
+      run: npm run test
+
+    # Run Cypress tests
+    - name: Run Cypress tests
+      uses: cypress-io/github-action@v4
+      with:
+        start: npm run dev 
+        wait-on: 'http://localhost:5173'
+        browser: chrome
+      env:
+        CI: true
+
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
       with:
